2008-02-23  Andras Varga

	* Started the ChangeLog. The Layout library was added in omnetpp-4.0. 
	It implements graph layouting algorithms, used for rendering networks
	and compound modules in the IDE (graphical NED editor, NED documentation
	generator), and in the runtime environment (Tkenv). BasicSpringEmbedderLayout
	was taken from 3.x Tkenv; the other, more advanced algorithms were
	implemented by Levente Meszaros.